# greplog

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
.github/workflows/: .pipeline.yml
src/: .main.c.swp  main.c
src/parameters/: parameters.c  parameters.h
src/parameters/test/: test_parameters.c
src/search/: search.c  search.h
src/search/test/: test_search.c
